fix wrong margin in iframe

--- a/skin/adv_like/adv_like.css
+++ b/skin/adv_like/adv_like.css
@@ -71,6 +71,10 @@ h6 + div:first-child {
 	margin-block-start: 0.5em;
 }
 
+iframe {
+	display: block;
+}
+
 pre {
 	border: 1px solid;
 	border-radius: 4px;
